--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
             color: #1e3d58;
             font-size: 36px;
         }
-        p {
-            font-family: 'Arial', sans-serif;
-            color: #555;
-            font-size: 18px;
-            margin: 20px 0;
-        }
         .content {
             max-width: 800px;
             margin: 0 auto;
@@ -31,6 +25,39 @@
             background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+        /* Общие стили для абзацев */
+        p {
+            margin: 15px 0;
+            font-size: 18px;
+        }
+
+        /* Разные стили для каждой строки */
+        .style1 {
+            font-family: 'Roboto', sans-serif;
+            color: #333;
+            font-weight: bold;
+        }
+        .style2 {
+            font-family: 'Open Sans', sans-serif;
+            color: #e74c3c;
+            font-style: italic;
+        }
+        .style3 {
+            font-family: 'Lora', serif;
+            color: #2ecc71;
+            text-decoration: underline;
+        }
+        .style4 {
+            font-family: 'Poppins', sans-serif;
+            color: #3498db;
+            text-transform: uppercase;
+            font-size: 20px;
+        }
+        .style5 {
+            font-family: 'Arial', sans-serif;
+            color: #9b59b6;
+            letter-spacing: 2px;
         }
     </style>
 </head>
@@ -40,6 +67,13 @@
         <p>Компания «Мегафон» — один из крупнейших российских операторов сотовой связи. Мы предоставляем мобильные и интернет-услуги по всей России.</p>
         <p>Мегафон активно развивает инновационные технологии и внедряет передовые решения для улучшения качества связи и обслуживания клиентов.</p>
         <p>Мы гордимся нашим вкладом в цифровизацию России и продолжим развивать новые сервисы для наших абонентов.</p>
+        
+        <!-- Пять строк с разными шрифтами и стилями -->
+        <p class="style1">1. Мегафон активно расширяет своё присутствие на рынке связи.</p>
+        <p class="style2">2. Мы всегда на шаг впереди в технологических инновациях.</p>
+        <p class="style3">3. Обслуживание клиентов — наш главный приоритет.</p>
+        <p class="style4">4. Мегафон предоставляет высокоскоростной интернет по всей стране.</p>
+        <p class="style5">5. Мы заботимся о том, чтобы наши абоненты всегда оставались на связи.</p>
     </div>
 </body>
 </html>
